2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/DatasetRenderingOrder.java
	(hashCode): Implemented,
	* source/org/jfree/chart/plot/DialShape.java
	(hashCode): Likewise,
	* source/org/jfree/chart/plot/PlotOrientation.java
	(hashCode): Likewise,
	* source/org/jfree/chart/plot/SeriesRenderingOrder.java
	(hashCode): Likewise.

2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/axis/DateAxis.java
	(previousStandardDate): Return dates already fetched.

2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/CategoryAxis.java
	(equalPaintMaps): Use entrySet rather than keySet.

2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/PieLabelRecord.java
	(equals): Implemented.

2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/Outlier.java
	(equals): Implemented.

2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/StandardXYItemRenderer.java
	(shapesFilled): Deprecated,
	(getShapesFilled): Likewise,
	(setShapesFilled): Likewise,
	(setBaseShapesVisible): Call fireChangeEvent() instead of notifyListeners(),
	(setPlotLines): Likewise,
	(setGapThresholdType): Likewise,
	(setGapThreshold): Likewise,
	(setPlotImages): Likewise,
	(setLegendLine): Likewise.
	
2007-11-21  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/PiePlot.java
	(DEFAULT_INTERIOR_GAP): Modified default value,
	(maximumLabelWidth): Likewise,
	(labelGap): Likewise,
	(labelLinkMargin): Likewise,
	(DEBUG_DRAW_INTERIOR): New debug flag,
	(DEBUG_DRAW_LINK_AREA): Likewise,
	(DEBUG_DRAW_PIE_AREA): Likewise,
	(PiePlot(PieDataset)): Removed background paint setting,
	(drawPie): Modified label position calculations and added debug code,
	(drawLabels): Modified label width calculation,