@@ -43,6 +43,7 @@
  *               dataset (DG);
  * 24-May-2006 : Added new tests (DG);
  * 31-Oct-2007 : New hashCode() test (DG);
+ * 21-Nov-2007 : Added testBug1832432() and testClone2() (DG);
  *
  */
 
@@ -202,6 +203,30 @@ public class TimeSeriesTests extends TestCase implements SeriesChangeListener {
         	assertTrue(false);
         }
 
+    }
+    
+    /**
+     * Another test of the clone() method.
+     */
+    public void testClone2() {
+    	TimeSeries s1 = new TimeSeries("S1", Year.class);
+    	s1.add(new Year(2007), 100.0);
+    	s1.add(new Year(2008), null);
+    	s1.add(new Year(2009), 200.0);
+    	TimeSeries s2 = null;
+    	try {
+    		s2 = (TimeSeries) s1.clone();
+    	}
+    	catch (CloneNotSupportedException e) {
+    		e.printStackTrace();
+    	}
+    	assertTrue(s1.equals(s2));
+    	
+    	// check independence
+    	s2.addOrUpdate(new Year(2009), 300.0);
+    	assertFalse(s1.equals(s2));
+    	s1.addOrUpdate(new Year(2009), 300.0);
+    	assertTrue(s1.equals(s2));
     }
 
     /**
@@ -581,6 +606,27 @@ public class TimeSeriesTests extends TestCase implements SeriesChangeListener {
             assertTrue(false);
         }
         assertEquals(1, ts.getItemCount());
+    }
+    
+    /** 
+     * A test for bug 1832432.
+     */
+    public void testBug1832432() {
+        TimeSeries s1 = new TimeSeries("Series");
+        TimeSeries s2 = null;
+        try {
+            s2 = (TimeSeries) s1.clone();
+        }
+        catch (CloneNotSupportedException e) {
+            e.printStackTrace();
+        }
+        assertTrue(s1 != s2);
+        assertTrue(s1.getClass() == s2.getClass());
+        assertTrue(s1.equals(s2));
+
+        // test independence
+        s1.add(new Day(1, 1, 2007), 100.0);
+        assertFalse(s1.equals(s2));    	
     }
     
     /**
